# wallboxsvc

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
conf.dev/: wallboxsvc-config.json
conf.dev/relay/: state
conf.shelly.prod/: wallboxsvc-config.json  wb-selfsigned-cert.pem  wb-selfsigned.key
conf.usbhid.prod/: wallboxsvc-config.json
conf.usbtty.prod/: wallboxsvc-config.json
gfx/: type2-plug-icon.xcf
src/: basic_auth_middleware.rs  cli_parser.rs  configuration.rs  handler_functions.rs  http_traits.rs  main.rs
static/: index.html
static/css/: wallboxsvc.css
static/js/: wallboxsvc.js
