[package]
name = "wallboxsvc"
version = "0.1.0"
edition = "2018"
authors = ["Sven Putze <github@hardcodes.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features=["openssl"] }
actix-files = "0.3"
actix-http = "2"
actix-web-httpauth = "0.5"
base64 = "0.13.0"
clap = "2.33.0"
env_logger = "0.8"
log = "0.4"
openssl = "0.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
